refactor: 회원가입 메소드 수정