@@ -23,7 +23,6 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional
 public class MemberService {
     private final MemberRepository memberRepository;
 
@@ -35,49 +34,44 @@ public class MemberService {
 
     private final SecurityContextService securityContextService;
 
-    public Long saveMember(CreateMemberDto createMemberDto) {
-        Member member = Member.builder()
-                .email(createMemberDto.getEmail())
-                .name(createMemberDto.getName())
-                .password(passwordEncoder.encode(createMemberDto.getPassword()))
-                .nickname(createMemberDto.getNickname())
-                .roleType(RoleType.USER)
-                .createdDate(ZonedDateTime.now())
-                .build();
-
-        validateDuplicateMember(member);
-        Member savedMember = memberRepository.save(member);
-        return savedMember.getId();
-    }
-
-    private void validateDuplicateMember(Member member) {
-        Member findMembers = memberRepository.findByName(member.getName());
-        if (findMembers != null) {
+    public Long saveMember(MemberDto.Request request) {
+        if (memberRepository.existsByEmail(request.getEmail())) {
             throw new IllegalStateException("Exist Duplicate Member");
         }
+
+        return memberRepository.save(Member.builder()
+                .email(request.getEmail())
+                .name(request.getName())
+                .password(passwordEncoder.encode(request.getPassword()))
+                .nickname(request.getNickname())
+                .roleType(RoleType.USER)
+                .createdDate(ZonedDateTime.now())
+                .build()).getId();
     }
 
     @Transactional(readOnly = true)
-    public List<MemberDto> findAllMembers() {
+    public List<MemberDto.Response> findAllMembers() {
         return memberRepository.findAll()
                 .stream()
-                .map(Member::toMemberDto)
-                .collect(Collectors.toList());
+                .map(MemberDto.Response::new)
+                .toList();
     }
 
     @Transactional(readOnly = true)
-    public MemberDto findOneMember(Long memberId) {
+    public MemberDto1 findOneMember(Long memberId) {
         return memberRepository.findById(memberId)
-                .map(member -> new MemberDto(member.getId(), member.getName(), member.getNickname(), member.getCreatedDate()))
+                .map(member -> new MemberDto1(member.getId(), member.getName(), member.getNickname(), member.getCreatedDate()))
                 .orElseThrow(() -> new IllegalStateException("No Exist Member"));
     }
 
+    @Transactional
     public Long updateNickname(Long memberNo, String updateNickname) {
         Member updateMember = memberRepository.findById(memberNo)
                                                     .orElseThrow(() -> new IllegalArgumentException("No Exist Member"));
         return updateMember.updateNickname(updateNickname);
     }
 
+    @Transactional
     public void deleteMember(Long memberId) {
         if(!memberRepository.existsById(memberId)) {
             throw new IllegalStateException("No Exist Member");
